<resources>
    <string name="app_name">Briscola!</string>
    <string name="settings_title">Settings</string>
    <string name="menu_title">Briscola!</string>
    <string name="new_game_button_text">New Game</string>
    <string name="continue_game_button_text">Continue Local Game</string>
    <string name="highscores_button_text">History</string>
    <string name="settings_button_text">Settings</string>

    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="game_mode_array">
        <item>VS AI</item>
        <item>VS Player</item>
        <item>AI VS AI</item>
        <item>VS Remote</item>
        <item>AI VS Remote</item>
    </string-array>

    <string-array name="who_starts_array">
        <item>Player 1</item>
        <item>Player 2</item>
        <item>Random</item>
    </string-array>

    <string-array name="deck_array">
        <item>Blue</item>
        <item>Red</item>
    </string-array>
</resources>
