<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rosato.polimi.cardgame.activities.MenuActivity"
    android:orientation="vertical"
    android:background="@drawable/wood"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">
        <TextView
            android:id="@+id/title"
            android:text="@string/menu_title"
            style="@style/Title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/new_game_button"
            style="@style/MenuButton"
            android:text="@string/new_game_button_text" />

        <Button
            android:id="@+id/continue_game_button"
            style="@style/MenuButton"
            android:text="@string/continue_game_button_text" />

        <Button
            android:id="@+id/history_button"
            style="@style/MenuButton"
            android:text="@string/highscores_button_text" />

        <Button
            android:id="@+id/settings_button"
            style="@style/MenuButton"
            android:text="@string/settings_button_text" />
    </LinearLayout>


</LinearLayout>
